--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^7.15.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazy-load": "^3.0.13",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
     "react-with-firebase-auth": "^1.3.2"
