--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "firebase": "^7.15.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
     "react-lazy-load": "^3.0.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
-    "react-with-firebase-auth": "^1.3.2"
+    "react-with-firebase-auth": "^1.3.2",
+    "styled-components": "^5.1.1",
+    "styled-icons": "^10.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
