--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-lazy-load": "^3.0.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-sound": "^1.2.0",
     "react-transition-group": "^4.4.1",
     "react-with-firebase-auth": "^1.3.2",
     "styled-components": "^5.1.1",
